test('status', executable('status-test', ['status-test.vala'],
     dependencies: [glib, gobject, tensorflow]))

test('tensor', executable('tensor-test', ['tensor-test.vala'],
     dependencies: [glib, gobject, tensorflow]))

test('string coding', executable('stringcoding-test', ['stringcoding-test.vala'],
     dependencies: [glib, gobject, tensorflow]))
