test('Status', executable('status-test', ['status-test.vala'],
     dependencies: [glib, gobject, tensorflow]))

test('Tensor', executable('tensor-test', ['tensor-test.vala'],
     dependencies: [glib, gobject, tensorflow]))

test('String Coding', executable('stringcoding-test', ['stringcoding-test.vala'],
     dependencies: [glib, gobject, tensorflow]))

test('Session Options', executable('sessionoptions-test', ['sessionoptions-test.vala'],
     dependencies: [glib, gobject, tensorflow]))
